--- a/css/style.css
+++ b/css/style.css
@@ -293,3 +293,30 @@ body {
     font-family: sans-serif;
     font-size: 17px;
 }
+
+
+.preloader {
+    display: flex;
+    padding: 5%;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.preloader__spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #cccccc;
+    border-top-color: #1a1a1a;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
