--- a/css/style.css
+++ b/css/style.css
@@ -320,3 +320,19 @@ body {
         transform: rotate(360deg);
     }
 }
+
+.swiper {
+    width: 90%;
+    text-align: center;
+}
+
+.swiper-slide {
+    margin: auto;
+}
+
+.swiper-slide img {
+    width: 400px;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
